--- a/DCvideos/DCSHG.html
+++ b/DCvideos/DCSHG.html
@@ -31,7 +31,35 @@
 
     <h2><a class="a" href="Intro.html">DC Super Hero Girls (2019) - Sigla ITA </a></h2>
 
-
+    <h1 style="margin-top: 35px; margin-bottom: 35px;">1* Stagione:</h1>
+    <h3>
+        <a class="a" href="S1Ep1.html"> 1x01 - Nuove amicizie - parte 1</a></li> <br>
+        <a class="a" href="S1Ep2.html"> 1x02 - Nuove amicizie - parte 2</a></li> <br>
+        <a class="a" href="S1Ep3.html"> 1x03 - Nuove amicizie - parte 3</a></li> <br>
+        <a class="a" href="S1Ep4.html"> 1x04 - Nuove amicizie - parte 4</a></li> <br>
+        <a class="a" href="S1Ep5.html"> 1x05 - Piccole vittorie </a></li> <br>
+        <a class="a" href="S1Ep6.html"> 1x06 - La rivale di Diana</a></li> <br>
+        <a class="a" href="S1Ep7.html"> 1x07 - L'invasione dei coniglietti</a></li> <br>
+        <a class="a" href="S1Ep8.html"> 1x08 - La Lanterna Viola</a></li> <br>
+        <a class="a" href="S1Ep9.html"> 1x09 - La rivincita di Kara</a></li> <br>
+        <a class="a" href="S1Ep10.html"> 1x10 - La regina degli scherzi</a></li> <br>
+        <a class="a" href="S1Ep11.html"> 1x11 - Bat-mito alla riscossa</a></li> <br>
+        <a class="a" href="S1Ep12.html"> 1x12 - Scontro al museo</a></li> <br>
+        <a class="a" href="S1Ep13.html"> 1x13 - La prima cotta</a></li> <br>
+        <a class="a" href="S1Ep14.html"> 1x14 - Vera magia</a></li> <br>
+        <a class="a" href="S1Ep15.html"> 1x15 - Super Hero Boys - parte 1</a></li> <br>
+        <a class="a" href="S1Ep16.html"> 1x16 - Super Hero Boys - parte 2</a></li> <br>
+        <a class="a" href="S1Ep17.html"> 1x17 - La convention</a></li> <br>
+        <a class="a" href="S1Ep18.html"> 1x18 - Amiche nemiche</a></li> <br>
+        <a class="a" href="S1Ep19.html"> 1x19 - Il litigio - parte 1</a></li> <br>
+        <a class="a" href="S1Ep20.html"> 1x20 - Il litigio - parte 2</a></li> <br>
+        <a class="a" href="S1Ep21.html"> 1x21 - Karen alla riscossa</a></li> <br>
+        <a class="a" href="S1Ep22.html"> 1x22 - Il burrito Bucket</a></li> <br>
+        <a class="a" href="S1Ep23.html"> 1x23 - Il gatto furioso</a></li> <br>
+        <a class="a" href="S1Ep24.html"> 1x24 - Asso contro Krypto</a></li> <br>
+        <a class="a" href="S1Ep25.html"> 1x25 - Anime gemelle - parte 1</a></li> <br>
+        <a class="a" href="S1Ep26.html"> 1x26 - Anime gemelle - parte 2</a></li> <br>
+    </h3>
 
     <h1 style="margin-bottom: 9px;">DOWLOADS</h1>
     <h2 style="margin-bottom: 9px;">Piccola sezione per chiunque volesse scaricare la serie</h2>
