--- a/DCvideos/S1Ep10.html
+++ b/DCvideos/S1Ep10.html
@@ -15,7 +15,7 @@
 <body>
                 <a class="b" href="DCSHG.html">Elenco episodi</a>
                 <h1>La regina degli scherzi</h1>
-                    <iframe width="1200" height="800" src="https://ok.ru/videoembed/6699130489435" frameborder="0"
+                    <iframe width="1200" height="800" src="https://d1mrnwe9chdcuv.cloudfront.net/w5furz%2Ffile%2F4bbab23ef79a1e33cc599061003cbc25_7528517ecbb3a6ceb1b70534276ec11b.mp4?response-content-disposition=inline%3Bfilename%3D%224bbab23ef79a1e33cc599061003cbc25_7528517ecbb3a6ceb1b70534276ec11b.mp4%22%3B&response-content-type=video%2Fmp4&Expires=1713219584&Signature=Q12n5CGZle1YOXOMtPKviWD-G1YGESova4MJBC5XAf3QDFGDUXpVrHx9YiWmtTCzc75DWs-eEb3sr13wFK1uy0c-mVVLNUQoo1xAS3H1KPd13WOZFSR8rS6I0TEGl~xEy0je8Tkkn2DcqYY90u-WU2U7Sjduo2~ZVO3PVEipj2odEOetk~P6fQdzNWce~v2-CRncWrGvTFeRYT7RqWCTGeJ-W270Z4TGRWAPiQDx1crvy0NLqwTmfaQG6oKD7ATfG2EmrFrZ6u5yoD7C1VbuLZzSuAo0vDbikoWwKDnUzLosvdRcjjTsylr1q0He0YIAKohZdblRWOSrih8BSYEVaA__&Key-Pair-Id=APKAJT5WQLLEOADKLHBQ" frameborder="0"
                         allowfullscreen></iframe>
                 <h1><a class="a" href="S1Ep11.html">1x11 - Bat-mito alla riscossa</a></h1>
 </body>
