--- a/DCvideos/S1Ep26.html
+++ b/DCvideos/S1Ep26.html
@@ -15,7 +15,7 @@
 <body>
                 <a class="b" href="DCSHG.html">Elenco episodi</a>
                 <h1>Anime gemelle - parte 2</h1>
-                    <iframe width="1200" height="800" src="https://ok.ru/videoembed/6715799898715" frameborder="0"
+                    <iframe width="1200" height="800" src="https://d21z835zxru65l.cloudfront.net/u8xpsz%2Ffile%2Fa16f03fc756e7ce379d9c2f13f6117a7_b7e112a000fe6405158fcc2abcf0bff5.mp4?response-content-disposition=inline%3Bfilename%3D%22a16f03fc756e7ce379d9c2f13f6117a7_b7e112a000fe6405158fcc2abcf0bff5.mp4%22%3B&response-content-type=video%2Fmp4&Expires=1713220786&Signature=Rk4J5bwy4R~NViMh5Vyh6uOpvNGQobCEC5fmR0-huRl3jOF6d9KfcmR28KFJoLQ4H8ISyUXJttVnNA~prUGadCfMO7qOJjTQLixvti9F15EDBCo3saYKYwp4DkHs9IS26pGrS8QT1gt2J1wsyhiIwhGSnIU02PGsFpUSjNTOQKKEuYf38SJyCXKTet8kSWoa2XVmpfhXqfZqk-kMeNt8N3HkG1~g4lL0P817yEqydL-MlZ~9Ec~Q8b6YSMiBiF~4t2J~MhoSneCqTbsX4zmQrgSzRh-l71HMRxFvFr7RC3ERDxBYRMuYD22JfpIpvcEP20mHvku7fZGhfqZZLYfGRQ__&Key-Pair-Id=APKAJT5WQLLEOADKLHBQ" frameborder="0"
                         allowfullscreen></iframe>
                 <h1><a class="a" href="S1Ep27.html">1x27 - I Tween Titans</a></h1>
 </body>
