--- a/DCvideos/S1Ep6.html
+++ b/DCvideos/S1Ep6.html
@@ -15,7 +15,7 @@
 <body>
                 <a class="b" href="DCSHG.html">Elenco episodi</a>
                 <h1>La rivale di Diana</h1>
-                    <iframe width="1200" height="800" src="https://ok.ru/videoembed/6699130882651" frameborder="0"
+                    <iframe width="1200" height="800" src="https://d3mprxcutrc9wk.cloudfront.net/w9nqrz%2Ffile%2F6b0795c25eadb00610f27ad891c8973b_2d2db9c8d50389dfde2a06156d49f935.mp4?response-content-disposition=inline%3Bfilename%3D%226b0795c25eadb00610f27ad891c8973b_2d2db9c8d50389dfde2a06156d49f935.mp4%22%3B&response-content-type=video%2Fmp4&Expires=1713219487&Signature=GRHKoO9hfdYdSGop9AFMdpn2sXGF3CGJjV39KSu7Gw2uhrgIt4HZqowv7r1kKcO2mgNjQi32iUgq3ltSbttqhpHdt9MN3MI5xCImDVvJY5xrK2QCxF4zDaxS0fWN6ehj1iDfQFmfxGRhkhb2TWK2QQpc37owoxYBT1ThnTVJSllpBPlvb0mWxkJlJdGZMHahHautmoQg9PjBQPkiektODtg6XBnB3OF2G5hBPvzpALagUDaBY~Tmhlz0khTnJbDb720EjhQN0HQmrPSPZyIjf1JG2nIn5xtlBj22zr0q~2XfRv-ap9gZgjHOMq74kWx~uF6JiL4cu8gqlAGq7kbdIg__&Key-Pair-Id=APKAJT5WQLLEOADKLHBQ" frameborder="0"
                         allowfullscreen></iframe>
                 <h1><a class="a" href="S1Ep7.html">1x07 - L'invasione dei coniglietti</a></h1>
 </body>
