--- a/DCvideos/S1Ep8.html
+++ b/DCvideos/S1Ep8.html
@@ -15,7 +15,7 @@
 <body>
                 <a class="b" href="DCSHG.html">Elenco episodi</a>
                 <h1>La Lanterna Viola</h1>
-                    <iframe width="1200" height="800" src="https://ok.ru/videoembed/6699131013723" frameborder="0"
+                    <iframe width="1200" height="800" src="https://d2aact24gtejsg.cloudfront.net/d0bsrz%2Ffile%2F4516b0c936d2de0ab215c1275783ccf5_32b7f3d1c5cce4ef9cc0a2e7b86c4cdf.mp4?response-content-disposition=inline%3Bfilename%3D%224516b0c936d2de0ab215c1275783ccf5_32b7f3d1c5cce4ef9cc0a2e7b86c4cdf.mp4%22%3B&response-content-type=video%2Fmp4&Expires=1713219535&Signature=RhmwVaCk7WVEbiBxIoZatyB5M0k9s4HfkeGEqQ3Jk8jPdGt8HLeEFn~0KlIj7rh6nr6wLMMUSFZFhCLzFQ6Vix08FnAGq9yW69I4GzNtL64W5~t-HE2M0Jm2k2ptEHE~n6pI2N9CoWjaok6~z4OxWqWE5n-t3hMD7SVrsoMDiFe6Aai4yKS1O~ySnn~RcZn8Ati155BpMShkqithmnD52ckZu2tI9fh3eQwqUdqUhfW4CLQOmA43zZL2cSSLk-P~W38Qf7f2JomDl15RICD83UP~uSZqobmfc3FjlecfpdS-Hfd2J5wvb0rPNjgbCYdLpTvLn5kl6hAcxp0so03xSA__&Key-Pair-Id=APKAJT5WQLLEOADKLHBQ" frameborder="0"
                         allowfullscreen></iframe>
                 <h1><a class="a" href="S1Ep9.html">1x09 - La rivincita di Kara</a></h1>
 </body>
