--- a/DCvideos/S1Ep1.html
+++ b/DCvideos/S1Ep1.html
@@ -15,7 +15,7 @@
 <body>
                 <a class="b" href="DCSHG.html">Elenco episodi</a>
                 <h1>Nuove amicizie - parte 1</h1>
-                    <iframe width="1200" height="800" src="https://ok.ru/videoembed/6693910743643" frameborder="0"
+                    <iframe width="1200" height="800" src="https://d14wqgquvu61po.cloudfront.net/i8e5rz%2Ffile%2Fc3e6ae021617aa3fbfc4929d4557d172_d9ee72f076fa8d454377da73dccdbb63.mp4?response-content-disposition=inline%3Bfilename%3D%22c3e6ae021617aa3fbfc4929d4557d172_d9ee72f076fa8d454377da73dccdbb63.mp4%22%3B&response-content-type=video%2Fmp4&Expires=1713218571&Signature=eplaDi2G3ScQGLPOBaVguVnL1Xqwk9tGuiBeSavagcuF3T1KpTwNlDvBXUu1LFUzmFGcvU4IE-kuuc6tNiDGcd3IomKOHZ1DYtjJRzojIUJcPvX3apYTQYjLlfJ~Yy~~~gEDiM~xMvKu52gtIRgvCj4EeHz5JDUsbt3WHTV3oFFwP0ld-7piGUbN9An~g~PoMuwEitJi0khF9cO84hWPVX3Gbn2E6caQGUSchkbnNEJanZEuQP0rfO7wftNcjZmNvnhl45pU6x3SYVFbEygKNGmsormYb7B9PAx8cvbE1BFwmymTlq-G6XQElmm946AqF9bAxhRLge4B5LHw0fHFnw__&Key-Pair-Id=APKAJT5WQLLEOADKLHBQ" frameborder="0"
                         allowfullscreen></iframe>
                 <h1><a class="a" href="S1Ep2.html">1x02 - Nuove amicizie - parte 2</a></h1>
 </body>
