--- a/DCvideos/S1Ep36.html
+++ b/DCvideos/S1Ep36.html
@@ -15,7 +15,7 @@
 <body>
                 <a class="b" href="DCSHG.html">Elenco episodi</a>
                 <h1>Il potere della musica - parte 2</h1>
-                    <iframe width="1200" height="800" src="https://ok.ru/videoembed/6715799702107" frameborder="0"
+                    <iframe width="1200" height="800" src="https://d168ijdb11kbqj.cloudfront.net/c9sd20%2Ffile%2F744008fcaa8e8d76300395abbd401c03_ca0d8eff79a8c4bb6700ce14e32fd404.mp4?response-content-disposition=inline%3Bfilename%3D%22744008fcaa8e8d76300395abbd401c03_ca0d8eff79a8c4bb6700ce14e32fd404.mp4%22%3B&response-content-type=video%2Fmp4&Expires=1713233260&Signature=SguJFfiN2ZAy-0wi3~FDs2GMoOLRA~DPBn7xMIN9gpSHKwh0VgZoUxvG5pYdY6xRxhJDOAtXKUmmr2vHMT48XdEkfO0sj9OWIjCi4hvTzl6VlkyHLH-0jpBJJlXWz3~jYSIwMdUx5fKljVmmaZOwCz0ypQVTXeTHDSNLVVi3KJ8qUIXEjhWa0Adc68~cF0-ogPeANEIkWyUJj14G03WkwCwWKToEAX5Z8j~wBndwdoAiIG1fjOp1ErtHkahFXvfs8Tnm-9pqgMAcX0yGGokravYcGycntKx2mZbuQS7ao~U4sh2Io4Fb2XrwlBKaOPySglYeVOXMQsKAlwGDOrsB6Q__&Key-Pair-Id=APKAJT5WQLLEOADKLHBQ" frameborder="0"
                         allowfullscreen></iframe>
                 <h1><a class="a" href="S1Ep37.html">1x37 - Ritorno al futuro</a></h1>
 </body>
