--- a/DCvideos/S1Ep39.html
+++ b/DCvideos/S1Ep39.html
@@ -15,7 +15,7 @@
 <body>
                 <a class="b" href="DCSHG.html">Elenco episodi</a>
                 <h1>Un alleato felino - parte 1</h1>
-                    <iframe width="1200" height="800" src="https://ok.ru/videoembed/6715800160859" frameborder="0"
+                    <iframe width="1200" height="800" src="https://d31tc1b63hlzap.cloudfront.net/b0ag20%2Ffile%2F96d7507b87298187f81fada2fc2613eb_9588b984fb84265f8fbb432e17f50626.mp4?response-content-disposition=inline%3Bfilename%3D%2296d7507b87298187f81fada2fc2613eb_9588b984fb84265f8fbb432e17f50626.mp4%22%3B&response-content-type=video%2Fmp4&Expires=1713233337&Signature=TfHKbmzsvNUW58cUg5~WeVC-VsEDf~KzSdN~U8xMidcgXjY1ARhVAx-KaoDxiDVSx8f3MLgulScUGXhHnyjqE0beCHSFpd7St1Ep6usgk6FJ-Te0Brsb0t-nok~07g~RmcbX-JWzd04cNB4QELB1~9-m3VvLe8h8NUhEXOcW-7U~93wIgbRDh64~Gcsm4FnfgypbILU6CfbUZBmVgnm6o1R88yqjLO38XMXjtnCQf2OeJ6Z8IKVDnqb8EhgUeAQ1qBrDOUljfR5pWh5D94AJSYpaQiKKjpuwbCFI0RKmUBuJjix6iUa~0ipk9NG3n0aw2eb4M~knplYysW5cHWIfGw__&Key-Pair-Id=APKAJT5WQLLEOADKLHBQ" frameborder="0"
                         allowfullscreen></iframe>
                         <h1 style="margin-bottom: 10px;">✨Questi sono i miei episodi preferiti (39-40)✨</h1>
                 <h1><a class="a" href="S1Ep40.html">1x40 - Un alleato felino - parte 2</a></h1>
