--- a/DCvideos/S1Ep40.html
+++ b/DCvideos/S1Ep40.html
@@ -15,7 +15,7 @@
 <body>
                 <a class="b" href="DCSHG.html">Elenco episodi</a>
                 <h1>Un alleato felino - parte 2</h1>
-                    <iframe width="1200" height="800" src="https://ok.ru/videoembed/6715800357467" frameborder="0"
+                    <iframe width="1200" height="800" src="https://d1eav5o1141ef7.cloudfront.net/g34h20%2Ffile%2F33da7e793e4a9c457de7e09ad9aaa32b_f4d0c5ba9b34ab370cc1801208af4529.mp4?response-content-disposition=inline%3Bfilename%3D%2233da7e793e4a9c457de7e09ad9aaa32b_f4d0c5ba9b34ab370cc1801208af4529.mp4%22%3B&response-content-type=video%2Fmp4&Expires=1713233363&Signature=LNjGftYVKERNTwcRQiyU-Z8QCcEyWtO2NanqwKL8zD0wiNQxYBiiQf8WUNBmnjdayRnxKPx1zzCZfGjOvB3EPp4PWd9LK0K-VJcFPXCe-2tnmKZDzEFxmvt~mvkmviq7WNCUMNWYN2TDsp6z0pEo9e6fP8i8fY4EzGf4wxOZr-dLjG6nKzd5HGlgRQS6nSXWjohc9ZzVJB3fc5YSPFSvqufnw6JTSIr-iy-3SZsLyMesyyrcIpQpT97mjdoVUcMnpRlo3rke9~edBuHkP3k23lRADbW7SWRU0BW6Suc9GucL2jImxS-VgKVU2iDv2skQdWFv-Ope6ytaFt62cpAnHQ__&Key-Pair-Id=APKAJT5WQLLEOADKLHBQ" frameborder="0"
                         allowfullscreen></iframe>
                 <h1><a class="a" href="S1Ep41.html">1x41 - Scontro sul palcoscenico</a></h1>
 </body>
