--- a/DCvideos/S1Ep41.html
+++ b/DCvideos/S1Ep41.html
@@ -15,7 +15,7 @@
 <body>
                 <a class="b" href="DCSHG.html">Elenco episodi</a>
                 <h1>Scontro sul palcoscenico</h1>
-                    <iframe width="1200" height="800" src="https://ok.ru/videoembed/6715829062235" frameborder="0"
+                    <iframe width="1200" height="800" src="https://d1slky1s14skwk.cloudfront.net/t1rh20%2Ffile%2F6f7196f9a9aff9d3191981d5863d3126_525997abbb455ebf923e5ef38b2855cd.mp4?response-content-disposition=inline%3Bfilename%3D%226f7196f9a9aff9d3191981d5863d3126_525997abbb455ebf923e5ef38b2855cd.mp4%22%3B&response-content-type=video%2Fmp4&Expires=1713233386&Signature=G26tYaC1i99n2JZCWuqatwEGLtMwVoCZ7b-gXE40F67BYlk3djEkZ0FN02RLt30wresuq6uMEVQDuCh4tXHSsDwnuVShLCJqpN7R8UyL2gr-rlNMQlSAqhhFtFNh3Da8et557IbyB~qI6UWzfYVXPPyt1oI1m3BwGk2hBub1p057GkBXKOX~BEwxbMJaNgiCovY2gso6y73Ep2IC~RTTDF6PK9odRBt9sDJm32xuhOIHugcewFkmUgoVS50yG04o0w7RbYg520gWcAl2RfXvfV86oq8dAkzLevt5ArqzuqGHerQGl8S6I2Q875YdWDBeA0KLwzfXjpG6lY~vUbwdFQ__&Key-Pair-Id=APKAJT5WQLLEOADKLHBQ" frameborder="0"
                         allowfullscreen></iframe>
                 <h1><a class="a" href="S1Ep42.html">1x42 - La nuova amica di Zee</a></h1>
 </body>
