--- a/DCvideos/S1Ep46.html
+++ b/DCvideos/S1Ep46.html
@@ -15,7 +15,7 @@
 <body>
                 <a class="b" href="DCSHG.html">Elenco episodi</a>
                 <h1>Lo scoop degli scoop</h1>
-                    <iframe width="1200" height="800" src="https://ok.ru/videoembed/6719793990235" frameborder="0"
+                    <iframe width="1200" height="800" src="https://djqmjgubtm50s.cloudfront.net/u9ml20%2Ffile%2F1acdaea781cb313b90ae2ecbaf158958_e56d6fd53732c39b138ef50863bb2000.mp4?response-content-disposition=inline%3Bfilename%3D%221acdaea781cb313b90ae2ecbaf158958_e56d6fd53732c39b138ef50863bb2000.mp4%22%3B&response-content-type=video%2Fmp4&Expires=1713233612&Signature=HX6QBDGb4NGVJeK6~ma6dkpgMlcYX1ifncUERB70eEGcay31vZpHaR5f9YBnaRhrH7altKF5GqLoL1k6k1c~-ikyHt1ebExGcUVQTTptSPbTCCjUCkcDp8ll8Idx7DvkVIfAsv6zBZXWBNlLY1AbjTOr10NF4zahfXznoKnwbxoluFPd6tKAbvah079b5Daig9UCpVuRQXgVa1~gp-mildKFsSOIe7RtiITgJ-srpbqnNi1r~drAhxZPSX5OekTgTpxlmB8VsmtRzEeu1bV5DNmKsQAfh0U~6hxPVt~i5LVdffzqRCMJNKz9hUnnT~kLz3jdmW6ayRJydWBC2im2mQ__&Key-Pair-Id=APKAJT5WQLLEOADKLHBQ" frameborder="0"
                         allowfullscreen></iframe>
                 <h1><a class="a" href="S1Ep47.html">1x47 - Una storia complicata</a></h1>
 </body>
