--- a/DCvideos/S1Ep48.html
+++ b/DCvideos/S1Ep48.html
@@ -15,7 +15,7 @@
 <body>
                 <a class="b" href="DCSHG.html">Elenco episodi</a>
                 <h1>Un amore impossibile</h1>
-                    <iframe width="1200" height="800" src="https://ok.ru/videoembed/6719794121307" frameborder="0"
+                    <iframe width="1200" height="800" src="https://d2gmxft35na058.cloudfront.net/s9un20%2Ffile%2F9940df9a3409fe1514d91c2382f68c02_7827034e30b81a9d97d7f27bd4067961.mp4?response-content-disposition=inline%3Bfilename%3D%229940df9a3409fe1514d91c2382f68c02_7827034e30b81a9d97d7f27bd4067961.mp4%22%3B&response-content-type=video%2Fmp4&Expires=1713233692&Signature=Ljun~s21deApIVNyvRGFBz5rtUW-hIUsydpf7O2Xgwmojjno-G2itp~sKnPMwUE~AAiJ3DvJ-1LU-W~XkrSHeySfZ8l-S-JsXG3k5v4Db48z9u-EH1WvGLVHRYNlY6jJ0Rnbn-NfJWpdarDJmS~VIHxn7fd1~bbuZQc5BeZiqAXWRANm-UZ8yfRRrIuRVRjzjGU5JsBoPp1pC0aWEqsMbt1vvQKAOohc5CEyW1f5QVd72nv50meC~1tH3zCfkzohmuhw5cxuQNKksrExGugRmUvyYJe4zFA5INGdnScN~G1OazaUvIYClpKVh2xsm~eFCdUBNTFeDhC55PN9q2zzPg__&Key-Pair-Id=APKAJT5WQLLEOADKLHBQ" frameborder="0"
                         allowfullscreen></iframe>
                 <h1><a class="a" href="S1Ep49.html">1x49 - Animali fantastici e come allevarli</a></h1>
 </body>
