--- a/DCvideos/S1Ep38.html
+++ b/DCvideos/S1Ep38.html
@@ -15,7 +15,7 @@
 <body>
                 <a class="b" href="DCSHG.html">Elenco episodi</a>
                 <h1>Power Girl</h1>
-                    <iframe width="1200" height="800" src="https://ok.ru/videoembed/6715799833179" frameborder="0"
+                    <iframe width="1200" height="800" src="https://d3010jjdmkwiov.cloudfront.net/t6kf20%2Ffile%2Fc2f5371dabaa658b14d27f1ebe5a75fa_83bc4d8187a41d7efa098a01b448d356.mp4?response-content-disposition=inline%3Bfilename%3D%22c2f5371dabaa658b14d27f1ebe5a75fa_83bc4d8187a41d7efa098a01b448d356.mp4%22%3B&response-content-type=video%2Fmp4&Expires=1713233320&Signature=Mn~RcDSSeiPWP-dKAT9xcG6WLJ1hE7WinNzIt2pRVEXVPOeO8rYXTbV3emSQHTKp-tIjMkEAg8ab2egUnYJUa9e~seDwfG5CUdM~RTHHKX~F~Sk-H7qU9OTYZQnjYTpPUhSn7b2p1ZGDY0NDmRDIokynb0wzvCM4EOecX-~~0WOMib3RbFsJHqVoJRxtX~zzzP9VbDnXXTofJevuRJTSPDbyBrEusLCFBf3ZgDBq~1GUkCBNfnJv6PWtdy82jwl58Ahu-VQrBhoABCajn1QW9ILLMsnvUDjtuQ6UH0gwZKE8jkgc9noO9zegRT2tWgu8JQXpUHmIM2r92H7XhMicRQ__&Key-Pair-Id=APKAJT5WQLLEOADKLHBQ" frameborder="0"
                         allowfullscreen></iframe>
                 <h1><a class="a" href="S1Ep39.html">1x39 - Un alleato felino - parte 1</a></h1>
 </body>
