--- a/404.html
+++ b/404.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" type="image/x-icon" href="Rufus logos/Rufus Black.png">
     <link rel="stylesheet" href="style.css">
-    <title>Rufus</title>
+    <title>404</title>
     <meta name="title" content="404">
     <meta name="description" content="Page Not Found">
 
