--- a/DCvideos/DCSHG.html
+++ b/DCvideos/DCSHG.html
@@ -24,11 +24,70 @@
         Per qualsiasi problema contattatemi e cancellero' immediatamente il sito e i suoi contenuti
     </h3>
     <h3 style="margin-bottom: 100px;"><a class="c" href="DMCA.html">DMCA/REMOVAL - TAKEDOWN - C&D CLICK HERE</a></h3>
-    <h1 class= "a" style=" margin-top: 35px; margin-bottom: 35px;"> Proprio per copyright molti gli episodi sono stati rimossi ma non temete: Rimane il download di tutta la serie!</h1>
 
-    <h2><a class="a" style="margin-bottom: 10px; href="Intro.html">DC Super Hero Girls (2019) - Sigla ITA </a></h2>
 
-    
+    <h1 class= "a" style=" margin-top: 35px; margin-bottom: 35px;"> Proprio per copyright molti (la maggior parte) degli episodi sono stati rimossi ma non temete: Rimane il download di tutta la serie!</h1>
+
+
+    <h2><a class="a" href="Intro.html">DC Super Hero Girls (2019) - Sigla ITA </a></h2>
+
+    <h1 style="margin-top: 35px; margin-bottom: 35px;">1* Stagione:</h1>
+    <h3 style="margin-top: 35px; margin-bottom: 35px;">
+        <a class="a" href="S1Ep1.html"> 1x01 - Nuove amicizie - parte 1</a><br>
+        <a class="a" href="S1Ep2.html"> 1x02 - Nuove amicizie - parte 2</a><br>
+
+        FUNZIONANO FIN QUI
+        <a class="a" href="S1Ep3.html"> 1x03 - Nuove amicizie - parte 3</a> <br>
+        <a class="a" href="S1Ep4.html"> 1x04 - Nuove amicizie - parte 4</a> <br>
+        <a class="a" href="S1Ep5.html"> 1x05 - Piccole vittorie </a> <br>
+        <a class="a" href="S1Ep6.html"> 1x06 - La rivale di Diana</a> <br>
+        <a class="a" href="S1Ep7.html"> 1x07 - L'invasione dei coniglietti</a> <br>
+        <a class="a" href="S1Ep8.html"> 1x08 - La Lanterna Viola</a> <br>
+        <a class="a" href="S1Ep9.html"> 1x09 - La rivincita di Kara</a> <br>
+        <a class="a" href="S1Ep10.html"> 1x10 - La regina degli scherzi</a> <br>
+        <a class="a" href="S1Ep11.html"> 1x11 - Bat-mito alla riscossa</a><br>
+        <a class="a" href="S1Ep12.html"> 1x12 - Scontro al museo</a> <br>
+        <a class="a" href="S1Ep13.html"> 1x13 - La prima cotta</a> <br>
+        <a class="a" href="S1Ep14.html"> 1x14 - Vera magia</a> <br>
+        <a class="a" href="S1Ep15.html"> 1x15 - Super Hero Boys - parte 1</a> <br>
+        <a class="a" href="S1Ep16.html"> 1x16 - Super Hero Boys - parte 2</a> <br>
+        <a class="a" href="S1Ep17.html"> 1x17 - La convention</a> <br>
+        <a class="a" href="S1Ep18.html"> 1x18 - Amiche nemiche</a> <br>
+        <a class="a" href="S1Ep19.html"> 1x19 - Il litigio - parte 1</a> <br>
+        <a class="a" href="S1Ep20.html"> 1x20 - Il litigio - parte 2</a> <br>
+        <a class="a" href="S1Ep21.html"> 1x21 - Karen alla riscossa</a> <br>
+        <a class="a" href="S1Ep22.html"> 1x22 - Il burrito Bucket</a> <br>
+        <a class="a" href="S1Ep23.html"> 1x23 - Il gatto furioso</a> <br>
+        <a class="a" href="S1Ep24.html"> 1x24 - Asso contro Krypto</a> <br>
+        <a class="a" href="S1Ep25.html"> 1x25 - Anime gemelle - parte 1</a> <br>
+        <a class="a" href="S1Ep26.html"> 1x26 - Anime gemelle - parte 2</a> <br>
+        <a class="a" href="S1Ep27.html"> 1x27 - I Tween Titans</a> <br>
+        <a class="a" href="S1Ep28.html"> 1x28 - Una gemella imperfetta</a> <br>
+        <a class="a" href="S1Ep29.html"> 1x29 - Il passato di Zee</a> <br>
+        <a class="a" href="S1Ep30.html"> 1x30 - La mitica zia Antiope</a> <br>
+        <a class="a" href="S1Ep31.html"> 1x31 - La strega del bosco</a> <br>
+        <a class="a" href="S1Ep32.html"> 1x32 - La piu' grande paura di Zee</a> <br>
+        <a class="a" href="S1Ep33.html"> 1x33 - Il pinguino imperatore</a> <br>
+        <a class="a" href="S1Ep34.html"> 1x34 - L'esame di guida</a> <br>
+        <a class="a" href="S1Ep35.html"> 1x35 - Il potere della musica - parte 1</a> <br>
+        <a class="a" href="S1Ep36.html"> 1x36 - Il potere della musica - parte 2</a> <br>
+        <a class="a" href="S1Ep37.html"> 1x37 - Ritorno al futuro</a> <br>
+        <a class="a" href="S1Ep38.html"> 1x38 - Power Girl</a> <br>
+        <a class="a" href="S1Ep39.html"> 1x39 - Un alleato felino - parte 1</a> <br>
+        <a class="a" href="S1Ep40.html"> 1x40 - Un alleato felino - parte 2</a> <br>
+        <a class="a" href="S1Ep41.html"> 1x41 - Scontro sul palcoscenico</a> <br>
+        <a class="a" href="S1Ep42.html"> 1x42 - La nuova amica di Zee</a> <br>
+        <a class="a" href="S1Ep43.html"> 1x43 - Diana cerca casa</a><br>
+        <a class="a" href="S1Ep44.html"> 1x44 - Lotta all'ultimo uovo</a> <br>
+        <a class="a" href="S1Ep45.html"> 1x45 - Cena per cinque</a><br>
+        <a class="a" href="S1Ep46.html"> 1x46 - Lo scoop degli scoop</a> <br>
+        <a class="a" href="S1Ep47.html"> 1x47 - Una storia complicata</a> <br>
+        <a class="a" href="S1Ep48.html"> 1x48 - Un amore impossibile</a> <br>
+        <a class="a" href="S1Ep49.html"> 1x49 - Animali fantastici e come allevarli</a> <br>
+        <a class="a" href="S1Ep50.html"> 1x50 - Le acchiappafantasmi</a> <br>
+        <a class="a" href="S1Ep51.html"> 1x51 - La principessa della fiera - parte 1</a> <br>
+        <a class="a" href="S1Ep52.html"> 1x52 - La principessa della fiera - parte 2</a> <br>
+    </h3>
 
     <h1 style="margin-bottom: 9px;">DOWLOADS</h1>
     <h2 style="margin-bottom: 9px;">Piccola sezione per chiunque volesse scaricare la serie</h2>
