--- a/DCvideos/Intro.html
+++ b/DCvideos/Intro.html
@@ -15,11 +15,7 @@
 <body>
                 <a class="b" href="DCSHG.html">Elenco episodi</a>
                 <h1>DC Super Hero Girls (2019) - Sigla ITA</h1>
-
-
-<div style="position: relative; padding-bottom: 56.25%; height: 0;"><iframe src="https://jumpshare.com/embed/dRAW1UUQBXkSHjwcKq4v" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"></iframe></div>
-                    <iframe class="flipped-video" width="1200" height="800" src="https://d24bps3fful69v.cloudfront.net/y9f4sz%2Ffile%2F93e7b3668bcfbebf0191c89d0b6c8079_c5cb5c9634473e3f760555ad0d281001.mp4?response-content-disposition=inline%3Bfilename%3D%2293e7b3668bcfbebf0191c89d0b6c8079_c5cb5c9634473e3f760555ad0d281001.mp4%22%3B&response-content-type=video%2Fmp4&Expires=1713219732&Signature=fcu333M0DutAJLfY8VgoU635Uj5j6YThKFfo38VIvx6h3gMo-z-YZoeTgC3RavGswhVI68ooBKeXlZZ1J12hRFi2CgTP7uFnaX1~qKnXI7PckNIzoMz1H4b4ISwoklABXAy4JJoAtlersir41WDNJGMFRRSrlD4cL4URi4BttEnQLF6KPKtrgh1MiOfOqHubNZJqjqUQQVUXVBIN2nigMdB2VxjMsWepkN-UeAR3pnIj6jkA0F0ePXwSfDylk0uPRAg~S2WDkTEWRFl~g0nIFda66yAIqOVzgbVAkpRrozTRchcRpqjtq4VEI45ilT82WnZpTHwb-mweLRwzaU8QVw__&Key-Pair-Id=APKAJT5WQLLEOADKLHBQ" frameborder="0"
-                        allowfullscreen></iframe>
+                <iframe src="https://drive.google.com/file/d/1h1vddtHd8g0pXoKnDuEREn9duL1-5cXe/preview" width="640" height="480" allow="autoplay"></iframe>
 </body>
 
 </html>
