--- a/DCvideos/DCSHG.html
+++ b/DCvideos/DCSHG.html
@@ -34,9 +34,9 @@
     <h1 style="margin-top: 35px; margin-bottom: 35px;">1* Stagione:</h1>
     <h3 style="margin-top: 35px; margin-bottom: 35px;">
         <a class="a" href="S1Ep1.html"> 1x01 - Nuove amicizie - parte 1</a><br>
-        <a class="a" href="S1Ep2.html"> 1x02 - Nuove amicizie - parte 2</a><br>
 
-        FUNZIONANO FIN QUI
+        -FUNZIONANO FIN QUI
+        <a class="a" href="S1Ep2.html"> 1x02 - Nuove amicizie - parte 2</a><br>
         <a class="a" href="S1Ep3.html"> 1x03 - Nuove amicizie - parte 3</a> <br>
         <a class="a" href="S1Ep4.html"> 1x04 - Nuove amicizie - parte 4</a> <br>
         <a class="a" href="S1Ep5.html"> 1x05 - Piccole vittorie </a> <br>
