--- a/DCvideos/S1Ep1.html
+++ b/DCvideos/S1Ep1.html
@@ -15,7 +15,7 @@
 <body>
                 <a class="b" href="DCSHG.html">Elenco episodi</a>
                 <h1>Nuove amicizie - parte 1</h1>
-                <iframe src="https://drive.google.com/file/d/16YsAzfBBFSa8Nnm8t20Y4yYuICVHuFXp/preview" width="640" height="480" allow="autoplay"></iframe>
+                <iframe src="https://drive.google.com/file/d/16YsAzfBBFSa8Nnm8t20Y4yYuICVHuFXp/preview" scrolling="no" frameborder="0" allowfullscreen></iframe>
                 <h1><a class="a" href="S1Ep2.html">1x02 - Nuove amicizie - parte 2</a></h1>
 
         
