--- a/DCvideos/S1Ep2.html
+++ b/DCvideos/S1Ep2.html
@@ -15,8 +15,7 @@
 <body>
                 <a class="b" href="DCSHG.html">Elenco episodi</a>
                 <h1>Nuove amicizie - parte 2</h1>
-                    <iframe width="1200" height="800" src="https://d3foqyi3s64lzo.cloudfront.net/y17grz%2Ffile%2Fde42e8b340574fcc540726e6b77c6401_1ca318b8a0609846ff6f6b13a09eda57.mp4?response-content-disposition=inline%3Bfilename%3D%22de42e8b340574fcc540726e6b77c6401_1ca318b8a0609846ff6f6b13a09eda57.mp4%22%3B&response-content-type=video%2Fmp4&Expires=1713218957&Signature=N23eZ~1P9oVGSP~wB8V~9eBZJkh7YQTKdY-s90kRRK1Vo4PK7bJtERHNfVtcUlp3k4-FzFbiIUUwjJrgENcnd7xlmU88jEMgzs0jxeNUWBNsa5ge0bI7rohNKjKhGD7woSVbbkaFUVT-ML2EqL8jQ6W9JkYE6xy83apXWRVM~eJujxhPgq0KZCiZa~AYllj0rIrmUX~TPNjtzmE7HTL7xrSPOdDQuWwx290msKC0Cce483l-XzdDE~GAeURBn2fq4CyD2R1Qpd6NBSxPnHDUxsUPboBArXjvRVKzmcH32VKV~WHSfwIRXZEJU00mZbB1k79JgWNXr5jjmFItLnaRxw__&Key-Pair-Id=APKAJT5WQLLEOADKLHBQ" frameborder="0"
-                        allowfullscreen></iframe>
+                <iframe src="https://drive.google.com/file/d/1QlZ00ZboDwN2MvKu5iwsw2gylN9QjsVz/preview" scrolling="no" frameborder="0" allowfullscreen></iframe>
                 <h1><a class="a" href="S1Ep3.html">1x03 - Nuove amicizie - parte 3</a></h1>
 </body>
 
