--- a/DCvideos/S1Ep3.html
+++ b/DCvideos/S1Ep3.html
@@ -15,8 +15,7 @@
 <body>
                 <a class="b" href="DCSHG.html">Elenco episodi</a>
                 <h1>Nuove amicizie - parte 3</h1>
-                    <iframe width="1200" height="800" src="https://d33kus5dr27uoa.cloudfront.net/x7znrz%2Ffile%2F9a24231d7209ec44fd5bd149c6fed387_4751035e3f8abc9360baec38287f9624.mp4?response-content-disposition=inline%3Bfilename%3D%229a24231d7209ec44fd5bd149c6fed387_4751035e3f8abc9360baec38287f9624.mp4%22%3B&response-content-type=video%2Fmp4&Expires=1713219276&Signature=WsoGBeioQV8D3QHTEbmHdx2lCLZMs~NHO1MuZYNBDRx37soLhJTOQAfjto3-q3OSK7qfNFaRdudmJWSgxxnlK1aOTl3JJyTRnrqS7ALtXSEkkHidFC55NM57cbUlFFpAGtAVbzzAVJSUvjb02MX2wt9vMaceontEw4z--no3wX2~Vx8w~3EjiwBR0nwf2m7iQJY4FI-Ca9R-6KWKve-Wzq9dD-M1TVyuiwdQyHp2FAUgMzNSzUsBB46kqaJuw-LwmxvQNt23dT3hLn-FEZYQi9Wn9X0ckqcPtgMMtrO5pv9nLODS09ulRlL9RtbR-1WzKJhM4AWeDiBwjncKEfiWcQ__&Key-Pair-Id=APKAJT5WQLLEOADKLHBQ" frameborder="0"
-                        allowfullscreen></iframe>
+                <iframe src="https://drive.google.com/file/d/1L8N8sLUNqzgSfN6KfDXeu85SgxheCNnR/preview" scrolling="no" frameborder="0" allowfullscreen></iframe>
                 <h1><a class="a" href="S1Ep4.html">1x04 - Nuove amicizie - parte 4</a></h1>
 </body>
 
