--- a/DCvideos/S1Ep4.html
+++ b/DCvideos/S1Ep4.html
@@ -15,7 +15,7 @@
 <body>
                 <a class="b" href="DCSHG.html">Elenco episodi</a>
                 <h1>Nuove amicizie - parte 4</h1>
-                <iframe src="https://drive.google.com/file/d/1_k8s8cifHJefHz6GR4Ohvn9N1XHLUpZO/preview" width="640" height="480" allow="autoplay"></iframe>                        allowfullscreen></iframe>
+                <iframe src="https://drive.google.com/file/d/1_k8s8cifHJefHz6GR4Ohvn9N1XHLUpZO/preview" scrolling="no" frameborder="0" allowfullscreen></iframe>
                 <h1><a class="a" href="S1Ep5.html">1x05 - Piccole vittorie </a></h1>
 </body>
 
